test/types/file/bradc/changeModeWhileOpen.good
changeModeWhileOpen.chpl:4: error: halt reached - Cannot change mode of file ./f.out while it is open
